--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 	<header>
-		<div class="nav_bar">
+		<div class="nav_bar" id="title">
 			<p class="midle_title">MOVEE</p>
 			<nav>	
-				<a href="">Цены</a>
-				<a href="">Автопарк</a>
-				<a href="">Отзывы</a>
-				<a href="">Контакты</a>
+				<a href="#price">Цены</a>
+				<a href="#auto">Автопарк</a>
+				<a href="#reviews">Отзывы</a>
+				<a href="#contact">Контакты</a>
 				<a href="">8(800)-080-12-13</a>
 				<div class="burger">
 					<span class="burger_line"></span>
@@ -91,7 +91,7 @@
 			</div>
 
 		</div>
-		<div class="price">
+		<div class="price" id="price">
 			<div class="title_block">
 				<span class="midle_title">Цены</span>
 				<h4>Фиксированная стоимость на переезд под ключ  </h4>
@@ -124,7 +124,7 @@
 				</div>			
 			</div>
 		</div>
-		<div class="slider_block">
+		<div class="slider_block" id="auto">
 			<p class="midle_title">10 видов автомобилей от 800 кг до 10 тонн</p>
 			<div class="pagination_blocks">
 				<div class="pagination_block active_pagination_block">Газели</div>
@@ -174,7 +174,7 @@
   				<div class="swiper-button-next"></div>
 			</div>
 		</div>
-		<div class="reviews">
+		<div class="reviews" id="reviews">
 			<h1 class="midle_title">Отзывы</h1>
 			<div class="review_blocks">
 				<div class="review_block">
@@ -211,7 +211,7 @@
 				</div>				
 			</div>
 		</div>
-		<div class="map_block">
+		<div class="map_block" id="contact">
     		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d60408.75310651082!2d37.621927811229185!3d55.75930617084393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab5269715db59%3A0x3c9ede46f385b391!2z0JLQvtC70LPQvtCz0YDQsNC00YHQutC40Lkg0L_RgC3Rgi4sIDM4!5e0!3m2!1sru!2sru!4v1642530674633!5m2!1sru!2sru"></iframe>
     		<div class="text_block">
     			<p class="midle_title">MOVEE</p>
@@ -229,11 +229,11 @@
 			<p>Соглашение на обработку персональных данных</p>
 		</div>
 		<div class="footer_columns">
-			<p>Главная</p>
-			<p>Цена</p>
-			<p>Автопарк</p>
-			<p>Отзывы</p>
-			<p>Контакты</p>
+			<a href="#title">Главная</a>
+			<a href="#price">Цены</a>
+			<a href="#auto">Автопарк</a>
+			<a href="#reviews">Отзывы</a>
+			<a href="#contact">Контакты</a>
 		</div>
 		<div class="footer_columns">
 			<p><b>hello@movee.ru</b></p>
