--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header>
-		<div class="nav_bar" id="title">
+		<div class="nav_bar" >
 			<p class="midle_title">MOVEE</p>
 			<nav>	
 				<a href="#price">Цены</a>
@@ -25,7 +25,7 @@
 				</div>
 			</nav>				
 		</div>
-		<div class="banner">
+		<div class="banner" id="title">
 			<div class="text_block">
 				<p class="title">Квартирные <br>переезды</p>
 				<p class="midle_title">По Москве и области</p>
@@ -46,8 +46,8 @@
 				</div>
 			</div>
 			<div class="images">
-				<img src="img/1.png">
-				<img src="img/2.png">
+				<img src="img/1.WebP">
+				<img src="img/2.WebP">
 			</div>
 		</div>
 	</header>
@@ -142,7 +142,7 @@
     						<p><img src="img/Vector.svg">Грузоподъемность 1,5 т</p>
     						<a href="" class="button_two">Заказать</a>
     					</div>
-    					<img src="img/3.png" class="image_slide">
+    					<img src="img/3.WebP" class="image_slide">
     					<p class="small_discript">Газель 3 метра / 1,5 тонны</p>
     				</div>
     				<div class="swiper-slide">
