--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="images">
 				<img src="img/1.WebP">
-				<img src="img/2.WebP">
+				<img src="img/2.Webp">
 			</div>
 		</div>
 	</header>
@@ -142,7 +142,7 @@
     						<p><img src="img/Vector.svg">Грузоподъемность 1,5 т</p>
     						<a href="" class="button_two">Заказать</a>
     					</div>
-    					<img src="img/3.WebP" class="image_slide">
+    					<img src="img/3.Webp" class="image_slide">
     					<p class="small_discript">Газель 3 метра / 1,5 тонны</p>
     				</div>
     				<div class="swiper-slide">
